Сделал динамический выбор карты

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <div class="menu">
       <div class="menu__title">Выберите карту</div>
       <div class="menu__items">
-        <div class="menu__item" data-map="0">
+        <div class="menu__item" data-map="map1">
           <img src="images/map1.jpg" alt="">
           <div class="menu__item-content">
             <div class="menu__item-title">Yuumeikyou o Wakatsu Koto</div>
             <div class="menu__item-subtitle">Сложность 5.5/10</div>
           </div>
         </div>
-        <div class="menu__item" data-map="1">
+        <div class="menu__item" data-map="map2">
           <img src="images/map2.jpg" alt="">
           <div class="menu__item-content">
             <div class="menu__item-title">The rise Yousei Teikoku</div>
