--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="game">
       
       <div class="game-container">
-        <div class="timer">0</div>
+        <div class="points-wrapper"><span class="points">0 </span> очков</div>
+        <div class="timer combo">0</div>
+        <button class="back-to-menu">Назад</button>
         <button class="btn-start">Начать</button>
         <div class="notes-container">
 
