Реализовал доабвление рекорда в local stotage и отрисовку этих рекордов конкретной карты

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <div class="menu__item-title">Yuumeikyou o Wakatsu Koto</div>
             <div class="menu__item-subtitle">Сложность 5.5/10</div>
           </div>
+
         </div>
         <div class="menu__item" data-map="map2">
           <img src="images/map2.jpg" alt="">
@@ -49,9 +50,28 @@
             <div class="menu__item-title">The rise Yousei Teikoku</div>
             <div class="menu__item-subtitle">Сложность 7/10</div>
           </div>
+          
         </div>
       </div>
       <div class="menu__btn">Начать</div>
+    </div>
+    <div class="records">
+      <div class="records__title">Мои рекорды</div>
+      <div class="records__items">
+        
+        <!-- <div class="records__item">
+          <span class="number">1.</span>
+          <img src="images/map2.jpg" alt="">
+          <div class="records__item-content">
+            <div class="records__item-title">Yuumeikyou o Wakatsu Koto</div>
+            <div class="records__points-wrapper">Количество очков: <span class="records__points">100343</span></div>
+          </div>
+          <div class="menu__item-statistic">
+              <div class="item-statistic__hits">Кол-во попаданий: 1232</div>
+              <div class="item-statistic__hits">Кол-во промахов: 0</div>
+            </div>
+        </div> -->
+      </div>
     </div>
   </div>
 
