--- a/create-panel.html
+++ b/create-panel.html
@@ -3,30 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
   <audio class="audio-pop" src="sounds/drum-hitnormal.mp3"></audio>
 
+  <!-- редактируемый трек -->
+  <audio class="music" src="sounds/2.mp3"></audio>
 
-  <div class="wrapper" style="background: #333;">
-    <audio class="music" src="sounds/2.mp3"></audio>
-    <div class="music-controls">
-      <input class="input-music" type="range" value="0" min="0" max="1000">
-      <div class="music-btns">
-        <button id="playButton">▶️</button>
-        <button id="pauseButton">⏸️</button>
-        <button id="stopButton">⏹️</button>
-        <button class="btn-speed" id="0.25">0.25</button>
-        <button class="btn-speed" id="0.50">0.50</button>
-        <button class="btn-speed" id="0.75">0.75</button>
-        <button class="btn-speed" id="1.00">1</button>
+  <div class="wrapper" style="background: #fff;">
+    
+    <div class="panel-frame">
+      <div class="music-controls">
+        <input class="input-music" type="range" value="0" min="0" max="1000">
+        <div class="music-btns">
+          <button id="playButton">▶️</button>
+          <button id="pauseButton">⏸️</button>
+          <button id="stopButton">⏹️</button>
+          <button class="btn-speed" id="0.25">0.25</button>
+          <button class="btn-speed" id="0.50">0.50</button>
+          <button class="btn-speed" id="0.75">0.75</button>
+          <button class="btn-speed" id="1.00">1</button>
+          <button class="test-btn">Тест</button>
+          <button class="save-notes">Сохранить ноты</button>
+          <button class="autoplay">Просмотр карты</button>
+        </div>
+      </div>
+      <div class="generated-notes">
+        <div class="generated-notes__title">Сгенерированные ноты</div>
+        <div class="generated-notes__list-wrapper">
+          <div class="generated-notes__list">
+
+            
+          </div>
+        </div>
       </div>
     </div>
 
-    <button class="test-music">Тестировать</button>
   </div>
+
+  
   <script src="create-panel.js"></script>
 </body>
 </html>
